лист с ресторанами описание ресторанов (коммит вынужденый-сломалась ide)

--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginBottom="70dp">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="egsdglkasdhbkhgcsbgvdsbgvdshbvhjsb"
-    />
+    <ImageView
+        android:id="@+id/current_dsih"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:src="@drawable/ask_cloud" />
+
+    <TextView
+        android:id="@+id/tv_dish_fr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/current_dsih"
+        android:text="Рестораны и кафе:"
+        android:textSize="20sp"
+        android:textColor="@color/colorBlack"
+        />
+    <ListView
+        android:id="@+id/dish_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@+id/tv_dish_fr" />
 
 </RelativeLayout>
