--- a/app/src/main/res/layout/stop_eat_test.xml
+++ b/app/src/main/res/layout/stop_eat_test.xml
@@ -227,6 +227,7 @@
 </LinearLayout>
 
     <Button
+        android:id="@+id/stop_eat_btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/head_linear"
