--- a/app/src/main/res/layout/preferences_fragment.xml
+++ b/app/src/main/res/layout/preferences_fragment.xml
@@ -14,7 +14,8 @@
 
         <!--app:titleTextAppearance="@style/Toolbar.TitleT"-->
         <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
+            android:id="@+id/preference_tab_layaut"
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorWhite"
@@ -26,14 +27,14 @@
             app:tabTextColor="#000000" />
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/preference_toolbar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/colorPrimary"
             android:theme="@style/AppTheme" />
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/view_pager"
+            android:id="@+id/preferemce_view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorWhite"/>
