Список ресторанов Список блид ресторана Описание блюд Поиск по блюдам Фильтрация блюд по Стоп-продуктам Создано окно профиля и функция выйти из приложения

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -17,9 +17,10 @@
             android:id="@+id/toolbar_main"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:elevation="0dp"
             android:background="@color/colorWhite"
-            android:theme="@android:style/Theme.Holo.Light"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+            android:theme="@style/AskMolly.Toolbar">
+
 
             <ImageView
                 android:id="@+id/tool_hamburger"
