--- a/app/src/main/res/layout/restaurant_description.xml
+++ b/app/src/main/res/layout/restaurant_description.xml
@@ -11,7 +11,8 @@
         android:id="@+id/descr_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:text="Description"
         android:textColor="@color/colorBlack"
         android:textSize="14sp"
