--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -2,66 +2,133 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#757575">
+    android:background="@color/colorWhite">
 
-    <ImageView
-        android:id="@+id/profile_cover"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:src="@drawable/cover" />
+    <LinearLayout
+        android:id="@+id/select_in_linear_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/profile_petal_top_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/vector_top_left_petal" />
+
+        <ImageView
+            android:id="@+id/profile_petal_top_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/vector_top_right_petal" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/profile_linear_bot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/profile_petal_bot_left"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/vector_bot_left_petal" />
+
+        <ImageView
+            android:id="@+id/profile_petal_bot_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/vector_bot_right_petal" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/profile_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="250dp"
         android:src="@drawable/cat_big"
         android:layout_centerHorizontal="true"
         android:paddingTop="95dp"
         />
 
     <TextView
-        android:id="@+id/profile_name"
+        android:id="@+id/tv_profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_photo"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:text="Имя Фамилия"
-        android:textSize="24sp"
-        android:textColor="@color/colorWhite"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="15dp"
+        android:text="Имя"
+        android:textSize="10sp"
+
+        />
+
+    <TextView
+        android:id="@+id/profile_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="15dp"
+        android:layout_below="@id/tv_profile_name"
+        android:textSize="18sp"
+        android:textColor="@color/colorBlack"
+        android:text="Ваше имя"
+        />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/profile_name"
+        android:layout_marginTop="9dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="@color/colorBlack"/>
+
+    <TextView
+        android:id="@+id/tv_profile_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/profile_name"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="30dp"
+        android:text="Телефон"
+        android:textSize="10sp"
         />
     <TextView
         android:id="@+id/profile_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/profile_name"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:text="111111111"
-        android:textSize="20sp"
-        android:textColor="@color/colorWhite"
+        android:layout_below="@+id/tv_profile_phone"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="15dp"
+        android:text="Ваш телефон"
+        android:textSize="18sp"
+        android:textColor="@color/colorBlack"
         />
 
-    <TextView
-        android:id="@+id/profile_town"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
         android:layout_below="@+id/profile_phone"
-        android:layout_marginTop="6dp"
-        android:layout_marginStart="22dp"
-        android:text="Город"
-        android:textSize="20sp"
-        android:textColor="@color/colorWhite"
-        />
+        android:layout_marginTop="9dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="@color/colorBlack"/>
+
 
     <Button
+        android:id="@+id/btn_profile_exit"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="45dp"
+        android:layout_above="@+id/profile_linear_bot"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/ic_check_box_button"
+        android:layout_marginBottom="30dp"
+        style="@style/AskMolly.ButtonProfileExit"
         android:text="Выйти"
+        android:textSize="18sp"
+        android:paddingStart="40dp"
+        android:paddingEnd="40dp"
 
         />
 
