--- a/app/src/main/res/layout/restaurant_menu_item.xml
+++ b/app/src/main/res/layout/restaurant_menu_item.xml
@@ -8,6 +8,7 @@
     android:paddingTop="15dp">
 
     <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/iv_menu_photo_dish"
         android:layout_width="124dp"
         android:layout_height="124dp"
         android:layout_marginBottom="10dp"
@@ -31,6 +32,7 @@
             android:textSize="14sp"
             android:textStyle="bold"/>
         <TextView
+            android:id="@+id/tv_menu_weight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@id/btn_menu_add"
@@ -45,7 +47,7 @@
 
             android:layout_marginBottom="8dp"
             android:text="Добавить          "
-            android:textSize="15sp"
+            
             style="@style/AskMolly.ButtonMain"
            android:layout_alignParentBottom="true"
             />
