--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -5,18 +5,65 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="70dp">
+    <LinearLayout
+        android:id="@+id/linear_carousel"
+        android:layout_width="match_parent"
+        android:layout_height="185dp"
+        android:orientation="vertical"
 
-    <ImageView
-        android:id="@+id/current_dsih"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:src="@drawable/ask_cloud" />
+        android:background="@drawable/carousel_shape">
+    <android.support.design.widget.TabLayout
+        android:id="@+id/carousel_tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorWhite"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="#0B421A"
+        app:tabIndicatorHeight="1.6dp"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="#0B421A"
+        app:tabTextColor="#000000" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/carousel_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/colorPrimary"
+        android:theme="@style/AppTheme" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/carousel_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"/>
+    </LinearLayout>
+<!--<LinearLayout-->
+    <!--android:id="@+id/linear_carousel"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="185dp"-->
+    <!--android:layout_marginStart="15dp"-->
+    <!--android:layout_marginEnd="15dp"-->
+    <!--android:background="@drawable/carousel_shape">-->
+    <!--<com.synnapps.carouselview.CarouselView-->
+        <!--android:id="@+id/carouselView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="185dp"-->
+        <!--android:background="@drawable/carousel_shape"-->
+
+        <!--app:fillColor="#FFFFFFFF"-->
+        <!--app:pageColor="#00000000"-->
+        <!--app:radius="5dp"-->
+        <!--app:slideInterval="7000"-->
+        <!--app:strokeColor="#FF777777"-->
+        <!--app:strokeWidth="1dp"/>-->
+<!--</LinearLayout>-->
 
     <TextView
         android:id="@+id/tv_dish_fr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/current_dsih"
+        android:layout_below="@+id/linear_carousel"
         android:text="Рестораны и кафе:"
         android:textSize="20sp"
         android:textColor="@color/colorBlack"
